--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "astro": "^2.10.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "tailwindcss": "^3.3.3",
     "uuid": "^9.0.0",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "prop-types": "^15.8.1"
   }
 }
